crates/runtime/tests/snapshots/loops__for_print_0_to_10.snap
---
source: crates/vm/tests/loops.rs
expression: snapshot
---
# Input:
for i in 0..=10:
  print i


# Result (success):
false

# Stdout:
0
1
2
3
4
5
6
7
8
9
10

