crates/runtime/tests/snapshots/loops__for_print_nothing.snap
---
source: crates/vm/tests/loops.rs
expression: snapshot
---
# Input:
for i in 10..0:
  print i


# Result (success):
false

# Stdout:

