crates/runtime/tests/snapshots/loops__print_0_to_9.snap
---
source: crates/vm/tests/loops.rs
expression: snapshot
---
# Input:
i := 0
loop:
  if i >= 10:
    break
  print i
  i += 1


# Result (success):
true

# Stdout:
0
1
2
3
4
5
6
7
8
9

